# daily-briefing-agent

./: .gitignore  LICENSE  README.md  app.py  config.yaml  docker-compose.yml  pyproject.toml
agent/: nodes.py  state.py  tools.py
api/: main.py
daily-briefing-backend/: .gitignore  Dockerfile  config.yaml  pyproject.toml
daily-briefing-backend/agent/: graph.py  nodes.py  state.py  tools.py
daily-briefing-backend/api/: main.py
daily-briefing-frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
daily-briefing-frontend/src/: App.tsx  index.css
daily-briefing-frontend/src/components/: BriefingView.tsx  ConfigPanel.tsx  EventFeed.tsx  JobPanel.tsx  StatusBadge.tsx
daily-briefing-frontend/src/hooks/: useAgentStream.ts  useJobs.ts
daily-briefing-frontend/src/utils/: types.ts
demo-screenshot/: 1- Startup Screen.heic  3- Final Brief Generated.heic  README.md
